# transcript-explorer-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test_brotli_concat.rs  zipsign.pub
.github/workflows/: release.yml
.kiro/specs/auto-update/: design.md  requirements.md  tasks.md
.kiro/specs/ratatui-update-integration/: design.md  requirements.md  tasks.md
.kiro/specs/windows-binary-replacement/: design.md  requirements.md  tasks.md
doc/: architecture.md  database_maintenance.md  encryption_compression.md  filtering_learnings.md  layouting_learnings.md  release_process.md  self_update.md  self_update_architecture.md  self_update_configuration.md  signing_setup.md  ui_patterns.md  ui_tour.md
doc/reviews/: review_1.3.5.md
doc/spec/: implementation_plan.md  research.md  task.md
examples/: test_age_speed.rs  test_mt_api.rs
src/: app.rs  codec.rs  db.rs  main.rs
src/ui/: detail.rs  filters.rs  help.rs  list.rs  mod.rs  password_overlay.rs  preview.rs  similar.rs  update_overlay.rs
src/update/: messages.rs  mod.rs
tools/: cleanup_db.py  pyproject.toml  release.sh
