[package]
name = "transcript-explorer"
version = "1.3.8"
edition = "2024"
description = "TUI explorer for YouTube transcript summaries stored in SQLite"


[dependencies]
turso = "0.4"
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
age = "0.10"
brotli = "8"
rpassword = "7"
tempfile = "3"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
indicatif = "0.17"
directories = "6"
futures-util = "0.3"
regex = "1"
wildmatch = "2"
chrono = { version = "0.4", features = ["serde"] }
tui-markdown = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
proptest = "1"
zipsign-api = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1 